# pixelperfect-downscale

./: AGENTS.md  Cargo.toml  README.md  main.py  pyproject.toml  readme.txt
src/: lib.rs  main.rs  wasm.rs
web/: app.js  index.html  style.css
